<resources>
    <string name="app_name">Talent Coach</string>

    <!-- API calls -->
    <string name="BASE_URL_API" translatable="false">http://projecten3studserver11.westeurope.cloudapp.azure.com/api/</string>
    <string name="login_login_response" translatable="false">com.talentcoach.id11.id11_android.login.loginResponse</string>
    <string name="login_username" translatable="false">com.talentcoach.id11.id11_android.login.username</string>
    <string name="login_password" translatable="false">com.talentcoach.id11.id11_android.login.password</string>

    <!-- Strings related to API calls -->
    <string name="leerling_niet_gevonden">Leerling niet gevonden</string>
    <string name="geen_rechten">Je hebt niet de nodige rechten</string>
    <string name="something_went_wrong_login">Er ging iets fout…</string>

    <!-- String related to Shared Preference -->
    <string name="sp_key_leerling">leerling</string>

    <!-- Strings related to AlgemeneInfoActivity -->
    <string name="aic_title">Algemene Info</string>
    <string name="action_werkspreuk">Werkspreuk bekijken</string>
    <string name="werkspreuk_loading_message">Werkspreuk aan het laden…</string>
    <string name="alg_info_btn">Algemene Info</string>
    <string name="spec_info_btn">Specifieke Info</string>
    <string name="geen_werkgever_voor_specifieke_info">Je hebt momenteel geen werkgever om specifieke info over te bekijken</string>

    <!-- Strings related to Common Use -->
    <string name="close">Sluit</string>
    <string name="cancel">Cancel</string>
    <string name="sluiten_van_app">Bent u zeker dat u Talent Coach wil afsluiten?</string>


    <!-- Strings related to Werkaanbiedingen -->
    <string name="wa_title">Werkaanbiedingen</string>
    <string name="wa_werkgever" translatable="false">%s</string>
    <string name="wa_beschrijving" translatable="false">%s</string>
    <string name="bekijk_werkaanb_btn">Bekijk werkaanbiedingen</string>
    <string name="werkaanbieding_bewaard">Werkaanbieding bewaard</string>
    <string name="remove_wa">Remove werkaanbieding</string>
    <string name="geen_bew_werkaanb">Geen bewaarde werkaanbiedingen</string>


    <!-- Strings related to HomeActivity -->
    <string name="communicatie">Communicatie</string>
    <string name="job">Job</string>
    <string name="coach">Coach</string>
    <string name="talent">Talent</string>
    <string name="react_positive">Like</string>
    <string name="react_negative">Don\'t Like</string>
    <string name="no_werkaanbieding_1">Geen gepaste werkaanbieding gevonden</string>
    <string name="no_werkaanbieding_2">Probeer uw interesses aan te vullen op je profiel</string>
    <string name="mijn_werkaanb_button">Mijn bewaarde werkaanbiedingen</string>
    <string name="bew_werkaanb_title">Bewaarde Werkaanbiedingen</string>


    <!-- Strings related to Competenties -->
    <string name="title_activity_comp__tabbed">Competenties</string>
    <string name="action_settings">Settings</string>
    <string name="Filter_Title">Filteren</string>
    <string name="werkaanbieding_title">Werkaanbieding</string>
    <string name="title_dialog_deelcompetentie_beoordelingen">Beoordelingen</string>
    <string name="behaald_op">Behaald op</string>
    <string name="geen_beoordelingen">heeft geen beoordelingen</string>
    <string name="niets_geselecteerd">Niets geselecteerd</string>
    <string name="behaald"> competenties behaald</string>


    <!-- Strings related to Login -->
    <string name="hint_username">Gebruikersnaam</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="login_button">Aanmelden</string>
    <string name="error_username">Gebruikersnaam mag niet leeg zijn</string>
    <string name="error_password">Wachtwoord moet minstens 8 letters bevatten</string>
    <string name="succesfull_login">Succesvol ingelogd</string>
    <string name="welkom">Welkom</string>
    <string name="wrong_login_credentials">Gebruikersnaam of wachtwoord is niet juist</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo_description">Logo van de applicatie</string>
    <string name="werkspreuk_1">\"Je weet nooit wat je kan,\ntot je het probeert\"</string>

    <!-- Strings related to Profiel -->
    <string name="logout_button">Afmelden</string>
    <string name="interests_txt">Interesses</string>
    <string name="profile_updated">Succesvol bijgewerkt</string>
    <string name="no_interests">Geen interesses</string>
    <string name="klas_txt">Klas</string>
    <string name="aanbiedingen_txt">Aanbiedingen</string>
    <string name="foute_suggesties_enkel">%s is geen geldige interesse</string>
    <string name="foute_suggesties_meervoud">%s zijn geen geldige interesses</string>

    <!-- Navigation related-->
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_competenties">Competenties</string>
    <string name="title_job">Job</string>
    <string name="title_aanbiedingen">Aanbiedingen</string>
    <string name="title_coach">Coach</string>
    <string name="title_profiel">Profiel</string>

    <!-- View related values -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_company_name">Accurat</string>
    <string name="dummy_opdracht_name">Opdracht</string>
    <!--<string name="dummy_opdracht_text">Dit is een hele lange en niet erg representatieve dummy text voor een opdracht van deze Job. Het is extra lang zodat we ervoor kunnen zorgen dat de opmaak mooi blijft bij het hebben van een lange beschrijving. Dit is een hele lange en niet erg representatieve dummy text voor een opdracht van deze Job. Het is extra lang zodat we ervoor kunnen zorgen dat de opmaak mooi blijft bij het hebben van een lange beschrijving. Dit is een hele lange en niet erg representatieve dummy text voor een opdracht van deze Job. Het is extra lang zodat we ervoor kunnen zorgen dat de opmaak mooi blijft bij het hebben van een lange beschrijving. Dit is een hele lange en niet erg representatieve dummy text voor een opdracht van deze Job. Het is extra lang zodat we ervoor kunnen zorgen dat de opmaak mooi blijft bij het hebben van een lange beschrijving.</string>-->
    <string name="dummy_opdracht_text">Dit is een hele lange en niet erg representatieve dummy text voor een opdracht van deze Job. Het is extra lang zodat we ervoor kunnen zorgen dat de opmaak mooi blijft bij het hebben van een lange beschrijving.</string>
    <string name="dummy_address_name">Adres</string>
    <string name="dummy_address_text">Voskenslaan 270 9000 Gent</string>
    <string name="dummy_tags_name">Tags</string>
    <string name="geenAanbiedingen">Het ziet ernaar uit dat je werkaanbiedingen op zijn! Probeer het op een later tijdstip opnieuw of voeg nieuwe interesses toe in het interesses scherm</string>
    <string name="selecteer_jouw_interesses">Jouw interesses</string>
    <string name="geenBewaardeAanbiedingen">Je hebt momenteel nog geen werkaanbiedingen bewaard. Tijd om daar verandering in te brengen!</string>

</resources>
