<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_competenties"
        android:icon="@drawable/school"
        android:title="@string/title_competenties" />

    <item
        android:id="@+id/navigation_job"
        android:icon="@drawable/ic_briefcase_black_24dp"
        android:title="@string/title_job" />

    <item
        android:id="@+id/navigation_aanbiedingen"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_aanbiedingen" />

    <item
        android:id="@+id/navigation_coach"
        android:icon="@drawable/ic_account_supervisor_circle_black_24dp"
        android:title="@string/title_coach" />

    <item
        android:id="@+id/navigation_profiel"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_profiel" />
</menu>
