<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WerkaanbiedingActivity">

    <Button
        android:id="@+id/mijnWerkaanbBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mijn_werkaanb_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/werkaanbiedingFragment"
        android:name="com.talentcoach.id11.id11_android.WerkaanbiedingFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/mijnWerkaanbBtn" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:max="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mijnWerkaanbBtn"
        app:layout_constraintVertical_bias="0.45" />

    <ImageButton
        android:id="@+id/like"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/react_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/noLike"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/thumbs_up" />

    <ImageButton
        android:id="@+id/noLike"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/react_negative"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cross" />

</android.support.constraint.ConstraintLayout>