<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".communicatie.AanbiedingenFragment"
    android:background="@color/colorGrey">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:minHeight="200dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_alignParentBottom="true">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp">

                    <android.support.design.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="4dp"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        app:strokeColor="@color/colorRed"
                        android:backgroundTint="@color/colorRed"
                        app:icon="@drawable/ic_close_24dp"
                        android:drawableTint="#ffffff"
                        app:iconGravity="textStart"
                        android:gravity="center"/>

                    <android.support.design.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="4dp"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        app:strokeColor="@color/colorGreen"
                        android:backgroundTint="@color/colorGreen"
                        app:icon="@drawable/ic_heart_outline_24dp"
                        android:drawableTint="#ffffff"
                        app:iconGravity="textStart"
                        android:gravity="center">
                    </android.support.design.button.MaterialButton>
                </LinearLayout>
            </LinearLayout>

            <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_above="@id/buttonContainer">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:text="@string/dummy_company_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:paddingTop="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/dummy_opdracht_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/cardText"
                        android:text="@string/dummy_opdracht_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:paddingTop="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/dummy_address_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/cardText"
                        android:text="@string/dummy_address_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:text="@string/dummy_tags_name" />
                    <android.support.design.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="20dp">

                        <android.support.design.chip.Chip
                            android:id="@+id/chip_example"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Teamwork"/>

                        <android.support.design.chip.Chip
                            android:id="@+id/chip_example2"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Leergierigheid"/>
                    </android.support.design.chip.ChipGroup>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </RelativeLayout>
    </android.support.design.card.MaterialCardView>

</FrameLayout>