<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".werkaanbiedingen.BewaardeAanbiedingCardFragment"
    android:layout_marginTop="16dp">
    <android.support.design.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/aanbiedingsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/werkgeverNaamOnCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="14dp"
                    android:paddingRight="16dp"
                    style="@style/Base.TextAppearance.AppCompat.Headline" />

                <TextView
                    android:id="@+id/opdrachtHeaderOnCard"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/dummy_opdracht_name" />

                <TextView
                    android:id="@+id/opdrachtBeschrijvingOnCard"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/cardText"
                    android:minLines="1" />

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/dummy_address_name" />

                    <TextView
                        android:id="@+id/adresOnCard"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="12dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/cardText" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/dummy_tags_name" />

                    <android.support.design.chip.ChipGroup
                        android:id="@+id/chipGroupBewaardeAanbieding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginRight="16dp">

                        <android.support.design.chip.Chip
                            android:id="@+id/chip_example"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="Teamwork" />

                        <android.support.design.chip.Chip
                            android:id="@+id/chip_example2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="Leergierigheid" />
                    </android.support.design.chip.ChipGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/divider"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp">
                        <android.support.design.button.MaterialButton
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:textColor="@color/colorRed"
                            android:layout_alignParentEnd="true"
                            android:text="Delete"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.card.MaterialCardView>
</android.support.constraint.ConstraintLayout>